# my_little_optimizer

./: .gitignore  aaaaa.py  client_optuna_demo.ipynb  ess.py  hmc.py  log_h.py  num.py  nuts.py  opt_nuts.py  optim_notebook.ipynb  optim_optuna_demo.ipynb  pyproject.toml  requirements.txt  simple_test_nuts.py  test.py  test_hmc.py  test_nuts.py  test_opt_fancy.py  wh.py
client/: pyproject.toml
client/my_little_optimizer_client/: __init__.py  client.py
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/[...path]/: route.ts
dashboard/components/: AppLayout.tsx  BestTrialCard.tsx  BreadcrumbNavigator.tsx  ExperimentListCard.tsx  ProgressCard.tsx  ProjectSweepsView.tsx  ProjectsView.tsx  SliceVisualizationCard.tsx  SweepDashboard.tsx  TrialListCard.tsx
dashboard/lib/: types.ts  useInterval.ts
my_little_optimizer/: adapt.py  ahmc.py  client.py  gaussian_process.py  log_h.py  metric.py  optim.py  turnkey.py  util.py
my_little_optimizer/opt/: adapt.py  ahmc.py  log_h.py  metric.py  optim.py  turnkey.py
my_little_optimizer/server/: api.py  manager.py
ngp/: adapt.py  ahmc.py  client.py  gaussian_process.py  kfac.py  log_h.py  metric.py  nuts.py  optim.py  switchvec.py  turnkey.py  util.py
ngp/server/: api.py  database.py  manager.py  types.py
scripts/: aaaaa.py  simple_test_nuts.py  test.py
server/: pyproject.toml
server/my_little_optimizer_server/: api.py  app.py  config.py  routes.py
server/my_little_optimizer_server/opt/: adapt.py  ahmc.py  log_h.py  metric.py  optim.py  turnkey.py
server/my_little_optimizer_server/server/: api.py  database.py  manager.py  types.py
server/tests/: test_gaussian_process.py  test_util.py
tests/: test_gaussian_process.py  test_util.py
