[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-little-optimizer-dev"
version = "0.1.0"
description = "Development environment for My Little Optimizer"
readme = "README.md"
authors = [
    { name = "Emily Shepperd" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

# Dependencies for development only
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "tox",
]

[project.optional-dependencies]
# Allow easy installation of both packages during development
all = [
    "my-little-optimizer-client @ file://./client",
    "my-little-optimizer-server @ file://./server",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest]
testpaths = ["server/tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.urls]
Homepage = "https://github.com/nshepperd/my_little_optimizer"