[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-little-optimizer-server"
dynamic = ["version"]
description = "A function-fitting bayesian optimization tool"
authors = [
    { name = "Emily Shepperd" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

# Dependencies will be read from requirements.txt
dependencies = [
    "fastapi[standard]", 
    "jax", 
    "optax", 
    "matplotlib", 
    "jax-tqdm", 
    "eindex==0.1.0", 
    "einops", 
    "jaxtorch==0.5.0", 
    "jaxopt", 
    "requests", 
    "cachetools",
    "pydantic-settings",
]

[project.urls]
Homepage = "https://github.com/nshepperd/my_little_optimizer"

[tool.hatch.version]
path = "my_little_optimizer_server/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["my_little_optimizer_server"]